# F_IRIS

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
config/: settings.yaml
config/prompts/: security.txt
src/: config.py  main.py
src/alerts/: telegram_notifier.py
src/cli/: interface.py
src/intelligence/: analyzer.py
src/memory/: event_store.py
src/vision/: camera.py  motion_detector.py
