[project]
name = "iris-security-agent"
version = "0.1.0"
description = "AI-powered security monitoring agent with computer vision and GPT-4o"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "opencv-python>=4.9.0",
    "imutils>=0.5.4",
    "pillow>=10.3.0",
    "numpy>=1.26.0",
    "openai>=1.12.0",
    "sqlite-utils>=3.36",
    "python-telegram-bot>=21.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
iris = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
